<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="15dp"
        android:layout_marginTop="15dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:layout_marginBottom="8dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/imgAvatar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="15dp"
        />


            <TextView
                android:id="@+id/name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imgAvatar"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:text="@string/full_name"
                android:textColor="@color/black"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/txtFirst"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imgAvatar"
                android:layout_toEndOf="@id/name"
                android:paddingLeft="10dp"
                android:textStyle="bold"
                android:paddingTop="10dp"
                android:text="@string/first_name"
                android:textColor="@color/black"
                android:textSize="20sp" />


            <TextView
                android:id="@+id/txtLast"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/imgAvatar"
                android:layout_toEndOf="@id/txtFirst"
                android:padding="10dp"
                android:paddingLeft="3dp"
                android:text="@string/last_name"
                android:textColor="@color/black"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/name"
                android:paddingLeft="5dp"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                android:textColor="@color/black"
                android:text="@string/email"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/txtEmail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/txtLast"
                android:layout_toEndOf="@id/email"
                android:padding="10dp"
                android:textStyle="bold"
                android:text="@string/email1"
                android:textColor="@color/black"
                android:textSize="20sp" />

        </RelativeLayout>

    </androidx.cardview.widget.CardView>


</RelativeLayout>